# email_newsletter_api

./: .example.env  Cargo.toml
src/: lib.rs  main.rs
src/db/: mod.rs  mongo.rs
src/handlers/: subscriber.rs
src/models/: mod.rs  subscriber.rs
