[package]
name = "email_newsletter_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
[dependencies]
mongodb = { version = "2.6.0", default_features = false, features = [
    "async-std-runtime",
] }
actix-web = "4"
dotenv = "0.15.0"
futures = "0.3"
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.5.6"
env_logger = "0.9"
